public/css/ResourceBrowser.css
#ResourceBrowser .toolbar {
    margin: 10px;
}

#ResourceBrowser .toolbar-button {
    margin-right: 20px;
}

#ResourceBrowser .right-button {
    float: right;
}

#ResourceBrowser .filter-input {
    border-radius: 5px;
    border: 1px solid #0000003b;
    float: right;
}

#ResourceBrowser .filter-input input {
    border: none;
    padding: 5px;
    width: 200px;
}

#ResourceBrowser .empty-list-card {
    position: absolute;
    left: 33%;
    top: 33%;
    max-width: 300px;
}

#ResourceBrowser .login-button {
    margin-top: 10px;
}

#ResourceBrowser .down-caret {
    margin-left: 5px;
}

#ResourceBrowser .table-container {
    height: calc(100vh - 215px);
}

#ResourceBrowser .deleted-resource {
    color: red;
    text-decoration: line-through;
}

#ResourceBrowser .deleted-icon {
    color: red;
}

#ResourceBrowser .inline-button-group {
    display: inline-block;
}

